# git_reviewer

./: .env.example  README.md  gpt_utils.py  main.py  pyproject.toml  requirements.txt
ai_analysis/: __init__.py  code_analysis_utils.py  collaboration_analysis_utils.py  gpt_utils.py
cli/: __init__.py  arg_parser.py  founding_engineer.py  recent_quality.py  repo_analysis.py  utils.py
core_analysis/: __init__.py  cis_scorer.py  enhanced_cis_scoring.py  improved_hybrid_analyzer.py  optimized_hybrid_analyzer.py
examples/: commits_phunter_lau_at_gmail_com.md  commits_phunter_lau_at_gmail_com_review.json
founding_engineer_review/: __init__.py  core.py
founding_engineer_review/analyzers/: __init__.py  collaboration_style.py  engineering_craftsmanship.py  initiative_ownership.py  technical_proficiency.py
founding_engineer_review/data_sources/: __init__.py  github_source.py
founding_engineer_review/models/: __init__.py  assessment.py  metrics.py
founding_engineer_review/reports/: __init__.py  report_generator.py
founding_engineer_review/scoring/: __init__.py  scoring_engine.py
github_integration/: __init__.py  github_activity_tracker.py  github_utils.py  github_utils_backup.py  github_utils_optimized.py
production_tools/: __init__.py  enhanced_founding_engineer_cli.py  founding_engineer_cli.py  founding_engineer_reviewer.py  phunterlau_report.py
